--- a/_data/world/2025/faq.yml
+++ b/_data/world/2025/faq.yml
@@ -13,7 +13,7 @@
 
     - question: Will Rails World be livestreamed?
       answer: >
-          Rails World will not be livestreamed, but we will publish the Opening Keynote within hours of it taking place. All other sessions will follow quickly and be online within two weeks after Rails World. <a href="https://www.youtube.com/@railsofficial">Subscribe</a> to be informed when the videos get published.
+          Rails World will not be livestreamed, but we will publish the Opening Keynote within hours of it taking place. All other sessions will fbe online within two weeks after Rails World. <a href="https://www.youtube.com/@railsofficial">Subscribe</a> to be informed when the videos get published.
 
     - question: Will there be a conference app or chat?
       answer: >
@@ -44,7 +44,7 @@
 - category: Tickets & Entry
   topics:
     
-    - question: What is the refund policy ?
+    - question: What is the refund policy?
       answer: |-
         If you need to cancel your registration for Rails World, please let us know as soon as possible by emailing <a href="mailto:world@rubyonrails.org">world@rubyonrails.org</a>.
         Full refunds are available up to 45 days prior to the start of the event, minus a 5% transaction fee. If you cancel between 44 and 30 days prior to the event, you are eligible for a 50% refund, minus the transaction fee.
@@ -67,7 +67,7 @@
 
     - question: How can I get to the venue?
       answer: |-
-        Beurs van Berlage (<a href="https://www.google.com/maps/place//data=!4m2!3m1!1s0x47c609c787f17ca7:0xfdc6eede688a772f?sa=X&ved=1t:8290&ictx=111">Google maps</a>), is located precisely 7 minutes by walk from Amsterdam Centraal. If you are staying in Amsterdam we would recommend taking any trams or bus going towards the station, and walk from there.
+        Beurs van Berlage (<a href="https://www.google.com/maps/place//data=!4m2!3m1!1s0x47c609c787f17ca7:0xfdc6eede688a772f?sa=X&ved=1t:8290&ictx=111">Google maps</a>), is located precisely 7 minutes by walk from Amsterdam Centraal. If you are staying in Amsterdam we would recommend taking any tram or bus going towards the station, and walk from there.
         For more accurate traveling options, please make use of the 9292 travel planner app or Google maps.
 
     - question: Where should I stay?
@@ -80,7 +80,7 @@
   topics:
     - question: How can I communicate my accessibility needs to the organisation?
       answer: >
-        Rails World is committed to making the event accessible to everyone. If you have specific accessibility needs or require any accommodations, please indicate that in the ‘Accessibility needs’ question of the registration form, and we will do our best to accommodate you.
+        Rails World is committed to making the event accessible to everyone. If you have specific accessibility needs or require any accommodations, please us know on the registration form, and we will do our best to accommodate you.
 
     - question: Will the conference be accessible by wheelchair?
       answer: >
@@ -93,7 +93,7 @@
     - question: How much walking will be required?
       answer: >
         While the building is fairly long, most of the program will take place on two tracks and in the Sponsor Lounge, the entries of which are all located closely together; meaning walking can be kept to a minimum if need be. There will be plenty of seating throughout the space to relax.
-        Attending workshops will require a longer distance, as they are located one floor higher at the end of the building. As an indication, the longest room is 45 meters (121 feet) long.
+        Attending workshops will require a longer distance, as they are located one floor higher at the end of the building. As an indication, the longest room is 45 meters long.
 
     - question: Will the talks have closed captioning?
       answer: |-
@@ -107,7 +107,7 @@
         - snack breaks
         - all-day non-alcoholic drinks and coffee
         - Barista coffee carts with espresso, lattes, and cappuccinos sponsored by Cedarcode
-        The Closing Party will also have passed appetizers and beer, wine, and softdrinks.
+        The Closing Party will also have passed appetizers and beer, wine, and soft drinks.
 
 
     - question: Do you have a cloakroom?
