--- a/_data/world/2025/faq.yml
+++ b/_data/world/2025/faq.yml
@@ -6,10 +6,9 @@
 
     - question: Does Rails World have a Code of Conduct?
       answer: >
-        You bet we do. [Please read the Code of Conduct here](/world/conduct).
-        We are committed to making Rails World a safe space for all.
+        We are committed to making Rails World a safe space for all, and We adhere to the [Rails Code of Conduct](/conduct).
         If you have any issues please reach out to
-        [world@rubyonrails.org](mailto:world@rubyonrails.org).
+        [foundation@rubyonrails.org](mailto:foundation@rubyonrails.org).
 
     - question: Will Rails World be livestreamed?
       answer: >
@@ -47,14 +46,16 @@
     - question: How much are tickets?
       answer: |-
         This year we will have two ticket types.
-        General Admission tickets will be 499 euro and go on sale May 13th. These tickets are strongly subsidized by the Rails Foundation and are idea for those attendees paying out of pocket. They tend to sell out quickly.
-        <a href="https://rails-foundation.neetoform.com/6c170cd8bdedc4b16ec0">Corporate Support tickets</a> are avaiable now until they are sold out, and will be 899 euro each. While still partially subsidized, the higher cost of these tickets will help keep General Admissoin tickets affordable for those paying out of pocket.
+        
+        - General Admission tickets will be 499 euro and go on sale May 13th. These tickets are strongly subsidized by the Rails Foundation and are idea for those attendees paying out of pocket. They tend to sell out quickly.
+        
+        - <a href="https://rails-foundation.neetoform.com/6c170cd8bdedc4b16ec0">Corporate Support tickets</a> are available now until they are sold out, and will be 899 euro each. While still partially subsidized, the higher cost of these tickets will help keep General Admissoin tickets affordable for those paying out of pocket.
         If your company has an L&D budget, please consider booking a Corporate Support ticket. <a href="https://rails-foundation.neetoform.com/6c170cd8bdedc4b16ec0">Book your Corporate ticket here.</a>
   
     - question: What is the refund policy?
       answer: |-
         If you need to cancel your registration for Rails World, please let us know as soon as possible by emailing <a href="mailto:world@rubyonrails.org">world@rubyonrails.org</a>.
-        Full refunds are available up to 45 days prior to the start of the event, minus a 5% transaction fee. If you cancel between 44 and 30 days prior to the event, you are eligible for a 50% refund, minus the transaction fee.
+        Corporate support tickets are non-refundable. Full refunds are available for General Admission tickets up to 45 days prior to the start of the event, minus a 5% transaction fee. If you cancel between 44 and 30 days prior to the event, you are eligible for a 50% refund, minus the transaction fee.
         Unfortunately, we cannot provide any refunds for cancellations less than 30 days prior to the event. However, you may transfer your ticket to another attendee free of charge up to 14 days prior to the start of Rails World.
 
     - question: Do you have a scholarship or financial support program?
