--- a/_data/world/2025/announcements.yml
+++ b/_data/world/2025/announcements.yml
@@ -1,1 +1,1 @@
-- content: "Mark your calendars: General admission tickets available May 13"
+- content: "General admission tickets available May 13; Corporate tickets available now - <a href="https://rails-foundation.neetoform.com/6c170cd8bdedc4b16ec0">Book here</a>"
