--- a/_data/world/2025/sponsors.yml
+++ b/_data/world/2025/sponsors.yml
@@ -12,7 +12,7 @@ gold:
     url: https://www.shopify.com/
 
 silver:
-  - name: Code Miner 42
+  - name: Codeminer42
     logo: /assets/world/2025/images/sponsors/RW-logo-codeminer42.png
     url: https://www.codeminer42.com/?utm_source=railsworld2025&utm_medium=website&utm_campaign=sponsor
   - name: Buzzsprout
