Update sponsors.yml with new logo

--- a/_data/world/2025/sponsors.yml
+++ b/_data/world/2025/sponsors.yml
@@ -21,6 +21,9 @@ silver:
   - name: Crunchy Data
     logo: /assets/world/2024/images/sponsors/RW-logo-crunchydata.svg
     url: https://www.crunchydata.com/
+  - name: GitLab
+    logo: /assets/world/2024/images/sponsors/RW-logo-gitlab.svg
+    url: https://about.gitlab.com/   
   - name: Intercom
     logo: /assets/world/2023/images/sponsors/RW-logo-intercom.svg
     url: https://www.intercom.com/
