--- a/_data/world/2025/sponsors.yml
+++ b/_data/world/2025/sponsors.yml
@@ -24,6 +24,9 @@ silver:
   - name: GitLab
     logo: /assets/world/2024/images/sponsors/RW-logo-gitlab.svg
     url: https://about.gitlab.com/   
+  - name: Huntress
+    logo: /assets/world/2024/images/sponsors/RW-logo-huntress.svg
+    url: https://www.huntress.com/
   - name: Intercom
     logo: /assets/world/2023/images/sponsors/RW-logo-intercom.svg
     url: https://www.intercom.com/
