different announcements on index and rails at scale pages

--- a/_data/world/2025/announcements.yml
+++ b/_data/world/2025/announcements.yml
@@ -1,1 +1,2 @@
-- content: "General admission tickets (499 euro) available May 13"
+general: "General admission tickets (499 euro) available May 13"
+rails_at_scale: "Invite Only - Apply to attend and be a part of the conversation"
