--- a/_data/world/2025/announcements.yml
+++ b/_data/world/2025/announcements.yml
@@ -1,2 +1,2 @@
-general: "General admission tickets (499 euro) available May 13"
+general: "General admission tickets (499 euro) available May 13, 5pm CEST"
 rails_at_scale: "Invite Only - Apply to attend and be a part of the conversation"
