--- a/_data/world/2025/sponsors.yml
+++ b/_data/world/2025/sponsors.yml
@@ -59,6 +59,9 @@ members:
   - name: ODDS
     logo: /assets/world/2025/images/sponsors/RW-logo-odds.svg
     url: https://odds.team/
+  - name: Rompslomp
+    logo: /assets/world/2023/images/sponsors/RW-logo-rompslomp2.svg
+    url: https://rompslomp.nl/
   - name: TRMNL
     logo: /assets/world/2025/images/sponsors/RW-logo-trmnl.png
     url: https://usetrmnl.com/
