--- a/_data/world/2025/announcements.yml
+++ b/_data/world/2025/announcements.yml
@@ -1,2 +1,2 @@
-general: "[TODAY] General admission tickets available at 5pm CEST"
+general: "[Book Now] General admission tickets now live"
 rails_at_scale: "Invite Only - Apply to attend and be a part of the conversation"
