--- a/_data/world/2025/announcements.yml
+++ b/_data/world/2025/announcements.yml
@@ -1,2 +1,2 @@
-general: "[Book Now] General admission tickets now live"
+general: "General admission now sold out - limited Corporate Support Tickets available"
 rails_at_scale: "Invite Only - Apply to attend and be a part of the conversation"
