--- a/_data/world/2025/announcements.yml
+++ b/_data/world/2025/announcements.yml
@@ -1,2 +1,2 @@
-general: "General admission now sold out - limited Corporate Support Tickets available"
+general: "Rails World is now sold out - See you soon in Amsterdam!"
 rails_at_scale: "Invite Only - Apply to attend and be a part of the conversation"
