--- a/_data/world/2025/faq.yml
+++ b/_data/world/2025/faq.yml
@@ -53,6 +53,9 @@
         Corporate support tickets are non-refundable. Full refunds are available for General Admission tickets up to 45 days prior to the start of the event, minus a 5% transaction fee. If you cancel between 44 and 30 days prior to the event, you are eligible for a 50% refund, minus the transaction fee.
         Unfortunately, we cannot provide any refunds for cancellations less than 30 days prior to the event. However, you may transfer your ticket to another attendee free of charge up to 14 days prior to the start of Rails World.
 
+        Corporate Tickets are non-refundable, but can be reassigned up to 14 days before the event.
+
+
     - question: Do you have a scholarship or financial support program?
       answer: |-
         We have a limited number of financial support tickets thanks to the support of our sponsors. They are currently all claimed, but if you would like to put yourself on the waiting list please write to <a href="mailto:world@rubyonrails.org">world@rubyonrails.org</a>.
