--- a/_data/world/2025/faq.yml
+++ b/_data/world/2025/faq.yml
@@ -45,7 +45,7 @@
 
     - question: I was not able to get a ticket, is there a chance that I can still get one?
       answer: >
-        You can reach out to <a href="mailto:world@rubyonrails.org">world@rubyonrails.org</a> and be added to a waiting list. No promises, but if a ticket becomes available, we will let you know. Please note: due to volume, we cannot reply to all requests, but don’t worry - even if you don’t hear from us, you’ll be added to the waiting list.
+        As of May 19, the waiting list is at full capacity, and we will no longer be adding people to it. Apologies if you did not get a ticket this year, but we hope to welcome you in the future. 
 
     - question: What is the refund policy?
       answer: |-
