--- a/_data/world/2025/sponsors.yml
+++ b/_data/world/2025/sponsors.yml
@@ -52,7 +52,7 @@ members:
     url: https://typesense.org/
   - name: Avo
     logo: /assets/world/2025/images/sponsors/RW-logo-avo.svg
-    url: https://avohq.io/
+    url: https://avohq.io/rails-admin
   - name: Telos Labs
     logo: /assets/world/2024/images/sponsors/RW-logo-teloslabs.svg
     url: https://hi.teloslabs.co/
