Add new speakers to RW website (#513)
* Add new speakers

* Add files via upload

* Update hiroshi-shibata.md

* Update sponsors.yml

* Add Framework logo

* Update sponsors.yml

* Add Andpad logo

* Update sponsors.yml

* Add files via upload

--- a/_data/world/2025/sponsors.yml
+++ b/_data/world/2025/sponsors.yml
@@ -4,12 +4,21 @@ platinum:
     url: https://www.appsignal.com/
 
 gold:
-  - name: GitHub
-    logo: /assets/world/2025/images/sponsors/RW-logo-github.svg
-    url: https://www.github.com/
   - name: Shopify
     logo: /assets/world/2025/images/sponsors/RW-logo-shopify.svg
     url: https://www.shopify.com/
+  - name: GitHub
+    logo: /assets/world/2025/images/sponsors/RW-logo-github.svg
+    url: https://www.github.com/
+  - name: Framework
+    logo: /assets/world/2025/images/sponsors/RW-logo-framework.png
+    url: https://frame.work/
+  - name: JetBrains
+    logo: /assets/world/2023/images/sponsors/RW-logo-jetbrains1.svg
+    url: https://www.jetbrains.com/
+  - name: Basecamp
+    logo: /assets/world/2025/images/sponsors/RW-logo-basecamp.svg
+    url: https://basecamp.com/
 
 silver:
   - name: Codeminer42
@@ -39,7 +48,7 @@ silver:
   - name: Sentry
     logo: /assets/world/2024/images/sponsors/RW-logo-sentry.svg
     url: https://sentry.io/
-  - name: Wyework
+  - name: Wyeworks
     logo: /assets/world/2025/images/sponsors/RW-logo-wyeworks.svg
     url: https://www.wyeworks.com/
 
@@ -53,6 +62,9 @@ members:
   - name: Avo
     logo: /assets/world/2025/images/sponsors/RW-logo-avo.svg
     url: https://avohq.io/rails-admin
+  - name: Aha!
+    logo: /assets/world/2025/images/sponsors/RW-logo-aha.png
+    url: https://www.aha.io/
   - name: Telos Labs
     logo: /assets/world/2024/images/sponsors/RW-logo-teloslabs.svg
     url: https://hi.teloslabs.co/
@@ -65,6 +77,12 @@ members:
   - name: TRMNL
     logo: /assets/world/2025/images/sponsors/RW-logo-trmnl.png
     url: https://usetrmnl.com/
+  - name: IQ Lab
+    logo: /assets/world/2025/images/sponsors/RW-logo-iqlab.png
+    url: https://www.iqlab.us/
+  - name: Andpad
+    logo: /assets/world/2025/images/sponsors/RW-logo-andpad.png
+    url: https://andpad.co.jp/
   - name: Cookpad
     logo: /assets/world/2024/images/sponsors/RW-logo-cookpad.svg
     url: https://cookpad.com/uk
@@ -74,6 +92,9 @@ members:
   - name: Fleetio
     logo: /assets/world/2024/images/sponsors/RW-logo-fleetio.svg
     url: https://www.fleetio.com/
+  - name: Judge.me
+    logo: assets/images/logo-judgeme.svg
+    url: https://judge.me/
   - name: Procore
     logo: /assets/world/2024/images/sponsors/RW-logo-procore.svg
     url: https://www.procore.com/en-gb
