--- a/_data/world/2025/sponsors.yml
+++ b/_data/world/2025/sponsors.yml
@@ -59,6 +59,9 @@ members:
   - name: Cedarcode
     logo: /assets/world/2024/images/sponsors/RW-logo-cedarcode.svg
     url: https://www.cedarcode.com/
+  - name: Rubyness
+    logo: /assets/world/2025/images/sponsors/RW-logo-rubyness.svg
+    url: https://rubyness.co.uk/
   - name: Typesense
     logo: /assets/world/2025/images/sponsors/RW-logo-typesense.svg
     url: https://typesense.org/
