--- a/_data/world/2025/sponsors.yml
+++ b/_data/world/2025/sponsors.yml
@@ -98,6 +98,9 @@ members:
   - name: Fleetio
     logo: /assets/world/2024/images/sponsors/RW-logo-fleetio.svg
     url: https://www.fleetio.com/
+  - name: Fullscript
+    logo: /assets/world/2024/images/sponsors/RW-logo-fullscript.svg
+    url: https://fullscript.com/
   - name: Judge.me
     logo: /assets/images/logo-judgeme.svg
     url: https://judge.me/
