--- a/_data/world/2025/sponsors.yml
+++ b/_data/world/2025/sponsors.yml
@@ -99,7 +99,7 @@ members:
     logo: /assets/world/2024/images/sponsors/RW-logo-fleetio.svg
     url: https://www.fleetio.com/
   - name: Fullscript
-    logo: /assets/world/2024/images/sponsors/RW-logo-fullscript.svg
+    logo: /assets/world/2024/images/sponsors/RW-logo-fullscript.png
     url: https://fullscript.com/
   - name: Judge.me
     logo: /assets/images/logo-judgeme.svg
