--- a/_data/world/2025/announcements.yml
+++ b/_data/world/2025/announcements.yml
@@ -1,2 +1,2 @@
-general: "Rails World is now sold out - See you soon in Amsterdam!"
-rails_at_scale: "Invite Only - Apply to attend and be a part of the conversation"
+general: "Rails World is sold out. Tickets will not be sold at the door. See you soon!"
+rails_at_scale: "Invited companies have now been sent the program & details. See you soon!"
