--- a/_data/community.yml
+++ b/_data/community.yml
@@ -117,7 +117,7 @@ committers:
   - name: Hartley
     url: https://github.com/skipkayhil
     location: USA
-    image: hartley.png
+    image: mcguire.png
 
 issues:
   - name: Adam Hess
