--- a/_data/world/2025/announcements.yml
+++ b/_data/world/2025/announcements.yml
@@ -1,2 +1,2 @@
-general: "Rails World is sold out. Tickets will not be sold at the door. See you soon!"
-rails_at_scale: "Invited companies have now been sent the program & details. See you soon!"
+general: "Rails World is a wrap. See you next year in Austin!"
+rails_at_scale: "Thank you to all 36 companies who participated this year."
