--- a/_data/version.yml
+++ b/_data/version.yml
@@ -1,3 +1,3 @@
-label: Rails 8.0.3
-date: September 22, 2025
-url: 2025/9/22/Rails-Version-8-0-3-has-been-released
+label: Rails 8.1.0
+date: October 21, 2025
+url: 2025/10/22/rails-8-1
