--- a/_data/version.yml
+++ b/_data/version.yml
@@ -1,3 +1,3 @@
-label: Rails 8.1.0
-date: October 21, 2025
-url: 2025/10/22/rails-8-1
+label: Rails 8.1.1
+date: October 28, 2025
+url: 2025/10/29/new-rails-releases-and-end-of-support-announcement
