Add feed support for release, foundation, and news categories
Closes #606.

--- a/_config.yml
+++ b/_config.yml
@@ -73,3 +73,9 @@ paginate_path: "/blog/page/:num"
 
 sass:
   style: compressed
+
+feed:
+  categories:
+    - releases
+    - foundation
+    - news
