--- a/_data/version.yml
+++ b/_data/version.yml
@@ -1,3 +1,3 @@
-label: Rails 8.1.1
-date: October 28, 2025
-url: 2025/10/29/new-rails-releases-and-end-of-support-announcement
+label: Rails 8.1.2
+date: January 8, 2025
+url: https://github.com/rails/rails/releases/tag/v8.1.2
