Moving community events to _events.yml, liquid rendering in events.html

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ world25_title: Rails World 2025 - Amsterdam, NL
 plugins:
   - jekyll-feed
   - jekyll-paginate
-  - jekyll-redirect-from
+  # - jekyll-redirect-from
   - jekyll-sitemap
   - jemoji
 
